🎨 Palette: Fix font resolution in CSS and ensure mobile menu visibility

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -7,7 +7,8 @@
 
 @font-face {
   font-family: 'NType82';
-  src: url('/awesome_nothing/fonts/NType82-Regular.otf') format('opentype');
+  /* Using relative path to src/fonts */
+  src: url('../fonts/NType82-Regular.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
